<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="at.ac.tuwien.ase09.android.fragment.OrderFragment">

    <include android:id="@+id/valuePaperItemView" layout="@layout/valuepaper_item" />

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/market_order"
                android:id="@+id/radioButtonMarketOrder"
                android:checked="true" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/limit_order"
                android:id="@+id/radioButtonLimitOrder" />

        </RadioGroup>

        <TextView
            android:id="@+id/validFromTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valid_from"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/validityFromDateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="currentDate" />

            <Button
                android:id="@+id/validityFromTimeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="currentTime" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/validToCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valid_to" />

        <LinearLayout
            android:id="@+id/validToArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/validityToDateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="currentDate" />

            <Button
                android:id="@+id/validityToTimeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="currentTime" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/volume"/>

        <EditText
            android:id="@+id/orderVolumeInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:text="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/estimated_order_value"/>

        <TextView
            android:id="@+id/estimatedOrderCost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="123 EUR"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_fee"/>

        <TextView
            android:id="@+id/orderFee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="45 EUR"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_order"
        android:id="@+id/button2"
        android:layout_gravity="bottom|right" />


</FrameLayout>
