<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="at.ac.tuwien.ase09.android.activity.OrderActivity">

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/confirmOrderButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_order"
            android:background="@android:drawable/btn_default" />
    </LinearLayout>

    <ProgressBar
        android:id="@android:id/progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/buttons">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/valuePaperItemView"
                layout="@layout/valuepaper_item" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/order_type" />

            <Spinner
                android:id="@+id/orderActionSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RadioGroup
                android:id="@+id/orderTypeRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonMarketOrder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/market_order" />

                <RadioButton
                    android:id="@+id/radioButtonLimitOrder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/limit_order" />

            </RadioGroup>

            <TextView
                android:id="@+id/limitTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/limit" />

            <EditText
                android:id="@+id/limitInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:text="12.5" />

            <TextView
                android:id="@+id/stopLimitTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/stopLimit" />

            <EditText
                android:id="@+id/stopLimitInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:text="14.5" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/validFromTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/valid_from" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/validityFromDateButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="currentDate" />

                <Button
                    android:id="@+id/validityFromTimeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="currentTime" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/validToCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/valid_to" />

            <LinearLayout
                android:id="@+id/validToArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/validityToDateButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="currentDate" />

                <Button
                    android:id="@+id/validityToTimeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="currentTime" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/volume" />

            <EditText
                android:id="@+id/orderVolumeInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/estimated_order_value" />

            <TextView
                android:id="@+id/estimatedOrderCost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="123 EUR" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/order_fee" />

            <TextView
                android:id="@+id/orderFee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="45 EUR" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
